--- a/webpage/DELTARUNESaveReader/DELTARUNESaveReader/Views/Home/Index.cshtml
+++ b/webpage/DELTARUNESaveReader/DELTARUNESaveReader/Views/Home/Index.cshtml
@@ -5,55 +5,63 @@
 }
 
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Deltarune Save Reader</title>
+    <link rel="stylesheet" href="dRuneTrackerStylesheet.css">
+    <source src="dRuneTracker.js">
+    <script src="dRuneTracker.js"></script>
+</head>
+<body>
 
-<html>
-    
-    <head>
-        <meta name="viewport" content="width=device-width" />
-        <title>Index</title>
-        <link href="~/css/dRuneTrackerStylesheet.css" rel="stylesheet" />
-        <script src="~/js/dRuneTracker.js"></script>
-        
-    </head>
-    
-    <body>
-        
-        <div id="content">
-            <h1 id="h1-title">Save Completion Tracker</h1>
-            <h2 id="h2-subtitle">For Deltarune</h2>
+    <div id="content">
+        <h1 id="h1-title">Save Completion Tracker</h1>
+        <h2 id="h2-subtitle">For Deltarune</h2>
 
-            <p class="smalltext"><!-- write banner of hrefs here: steam guide, github --></p>
+        <p class="smalltext"><!-- write banner of hrefs here: steam guide, github --></p>
 
-            <div class="tooltips">
-                <!-- pasteable path for "noob users." -->
-                <input id="save-location-input" value="%LOCALAPPDATA%\DELTARUNE" readonly="readonly">
+        <div class="tooltips">
+            <!-- pasteable path for "noob users." -->
+            <input id="save-location-input" value="%LOCALAPPDATA%\DELTARUNE" readonly="readonly">
 
-                <span class="tooltips-text" id="save-location-input-tooltips">
-                    <br> <!-- Add JS on-hover for tooltips-text class -->
-                    "Click once to copy to clipboard" <!-- Add JS on-click handler here, onclick copy to clipboard and change message to "Copied to clipboard"-->
-                </span>
-            </div>
-
-            <p class="smalltext">
-                Choose
-                <strong>both save files</strong>
-                then drag and drop, or select directly in the box below
-            </p>
-
-            <p></p> <!--Empty paragraph for spacing.-->
-
-            <div id="save-file-input">
-                <!-- Add save file selection here eg. ("Drag and drop or select save file (use botton for select)" in a box.) -->
-            </div>
-
-
-            <h2 id="h2-game-status">Game completion status:</h2> <!--  Add % variable through JS here (float) -->
-
-            <p>Time Played</p> <!--JS displays data here-->
-            <!--More Random Fun save facts here:-->
+            <span class="tooltips-text" id="save-location-input-tooltips">
+                <br> <!-- Add JS on-hover for tooltips-text class -->
+                "Click once to copy to clipboard" <!-- Add JS on-click handler here, onclick copy to clipboard and change message to "Copied to clipboard"-->
+            </span>
         </div>
 
-    </body>
+        <p class="smalltext">
+            Choose
+            <strong>filech1_#</strong>
+            then drag and drop, or select directly in the box below.
+        </p>
+
+        <p class="smalltext">
+            The number on the save file is which slot the file is saved in, 1, 2, or 3. filech1_9 is your latest autosave.
+        </p>
+
+        <p></p> <!--Empty paragraph for spacing.-->
+
+        <div id="save-file-input">
+
+            <!-- Add save file selection here eg. ("Drag and drop or select save file (use botton for select)" in a box.) -->
+            <input id="saveInput" type="file" accept="file/*" value="">
+
+            <!-- Informs user if file selected is a Deltarune Chapter 1 Save file (just checks filename) -->
+            <p id="saveConfirmer">No file input yet.</p>
+
+            <!-- Button to confirm file (I attempted to make a localStorage value that holds the filepath, but apparently input type: file values use a fakepath to keep user filepaths private.) -->
+            <button id="confirmButton">Confirm!</button>
+        </div>
 
 
+        <h2 id="h2-game-status">Game completion status:</h2> <!--  Add % variable through JS here (float) -->
+
+        <p>Time Played</p> <!--JS displays data here-->
+        <!--More Random Fun save facts here:-->
+    </div>
+</body>
 </html>
+
