Added css and Java to site

--- a/webpage/DELTARUNESaveReader/DELTARUNESaveReader/Views/Home/Index.cshtml
+++ b/webpage/DELTARUNESaveReader/DELTARUNESaveReader/Views/Home/Index.cshtml
@@ -10,12 +10,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deltarune Save Reader</title>
-    <link rel="stylesheet" href="dRuneTrackerStylesheet.css">
-    <source src="dRuneTracker.js">
-    <script src="dRuneTracker.js"></script>
+    <link rel="stylesheet" href="~/css/dRuneTrackerStylesheet.css">
+    <source src="~/js/dRuneTracker.js">
+    <script src="~/js/dRuneTracker.js"></script>
 </head>
 <body>
-
     <div id="content">
         <h1 id="h1-title">Save Completion Tracker</h1>
         <h2 id="h2-subtitle">For Deltarune</h2>
@@ -62,6 +61,7 @@
         <p>Time Played</p> <!--JS displays data here-->
         <!--More Random Fun save facts here:-->
     </div>
+
 </body>
 </html>
 
