Moved scripts to the html page at the teacher's suggestion.

--- a/webpage/DELTARUNESaveReader/DELTARUNESaveReader/Views/Home/Index.cshtml
+++ b/webpage/DELTARUNESaveReader/DELTARUNESaveReader/Views/Home/Index.cshtml
@@ -61,6 +61,16 @@
         <!--More Random Fun save facts here:-->
     </div>
     <script src="~/js/dRuneTracker.js"></script>
+    <script>
+        inButton.addEventListener("click", readFile);
+
+        function readFile() 
+        {
+            alert("Is this even working")
+            document.getElementById("saveConfirmer").innerText = "This is the element that i need to edit.";
+        }
+        
+    </script>
 </body>
 </html>
 
